src/components/RequestDetails/RequestDetails.scss
.approval {
  .preloader {
    .spinner {
      top: 35%;
    }
  }

  .error-msg {
    height: initial;
    width: initial;
  }

  .text {
    &--blue {
      color: #3359db;

    }

    &--grey,
    &--black {
      color: #4f4f4f;
    }

    &--black {
      font-size: 1.3em;

    }
  }

  .header-container {
    position: relative;
    height: min-content;

    .header {
      display: inline-block;
      height: initial;
      width: initial;

      @media (max-width: 859px) and (min-width: 865px) {
        margin: 0 0 1.2em 0;
      }

      a {
        margin-right: 0.7em;
      }
    }

    .progress-tags {
      display: inline-flex;
      position: relative;

      div:nth-child(1) {
        margin: 0 0.8em;
      }

      .stage-container {
        display: grid;
        grid-template-columns: repeat(4, auto);
        grid-gap: 10px;

        @media (max-width: 768px) and (min-width: 320px) {
          grid-template-columns: repeat(2, auto);
        }

        .stage {
          background-color: #ffffff;
          border-radius: 0.4em;
          color: #4a4a4a;
          font-size: 12px;

          padding: 2px 12px;

          &.is-current {
            border: 1px solid #5a6577;

            &.incomplete {
              background-color: #ffffff;
              color: #5a6577;
            }
          }

          .green-tick {
            padding-left: 5px;
            padding-bottom: 3px;
          }

        }
      }
    }
  }

  .main-container {
    display: flex;
    width: 100%;

    .row {
      background-color: #fff;
      border: 1px solid #e4e4e4;
      border-radius: 0.5em;
      height: 10em;
      margin: 1em 0 0;
    }

    .left-pane {
      width: 62%;
      margin: 0 1.2% 0 0;

      .row {
        display: flex;

        .mobile {
          display: none;
        }

        .partition {
          padding: 2em 0 0 3em;
          text-transform: capitalize;
          text-align: left;
          width: 33%;

          .info-button {
            &--true {
              span {
                width: 11em;
              }

              &:hover {
                cursor: not-allowed;

                span {
                  display: block;
                }
              }
            }

            &--false {
              span {
                width: 16em;
              }

              &:hover {
                cursor: pointer;

                span {
                  display: block;
                }
              }
            }

            &--false,
            &--true {
              background-color: #3359db;
              border: 0;
              border-radius: 100%;
              color: #fff;
              font-size: 0.8em;
              font-style: normal;

              margin: 0 0 0 0.5em;
              outline: none !important;
              padding: 0 0.6em;
              position: relative;

              span {
                background-color: #f8f8f8;
                box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
                color: #4f4f4f;
                display: none;
                padding: 0.5em 1em;
                position: absolute;
                z-index: 2;
              }
            }
          }

          .with-image {
            margin: 0 0 0 3em;
            position: relative;

            .user-image {
              background-repeat: no-repeat;
              background-size: cover;
              border-radius: 100%;
              display: inline-block;
              height: 2.6em;
              margin: -0.35em 0 0 -3em;
              position: absolute;
              width: 2.6em;
            }
          }
        }

        .travel-stipend-modal {
          position: relative;

          .modal-content {
            padding: 0;

            .stipend-container-block {
              background-color: #fff;
              box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
              padding: 1em 1em 4em 1em;
              width: initial;
              text-align: right;

              .total-stipend {
                display: inline-block;
                width: initial;
                height: initial;
                padding: 0.5em;
                margin-left: 0;
              }

              .stipend-row {
                width: initial;
              }
            }
          }
        }
      }
    }

    .right-pane {
      width: 38%;

      .row {
        .btn-group {
          position: relative;

          button {
            background-color: transparent;
            border-radius: 0.1em;
            font-size: 1em;
            margin: 0 2em;
            outline: none !important;
            padding: 0.6em 1.4em;
            text-transform: capitalize;

            &:hover {
              cursor: pointer;
            }
          }

          .action-button {
            &--verify {
              border: 1px solid #3359db;
              color: #3359db;
            }

            &--verified {
              background-color: #49aaaf;
              border: 1px solid #49aaaf;
              color: #fff;

              &:hover {
                cursor: not-allowed;
              }

              @media (max-width: 324px) {
                font-size: smaller;
              }
            }

            &--approve {
              border: 1px solid #3359db;
              color: #3359db;
            }
            &--approved {
              background-color: #49aaaf;
              border: 1px solid #49aaaf;
              color: #fff;

              &:hover {
                cursor: not-allowed;
              }

              @media (max-width: 324px) {
                font-size: smaller;
              }
            }

            &--reject {
              border: 1px solid #d0021b;
              color: #d0021b;
            }

            &--rejected {
              background-color: #ff5359;
              border: 1px solid #ff5359;
              color: #fff;

              &:hover {
                cursor: not-allowed;
              }

              @media (max-width: 324px) {
                font-size: smaller;
              }
            }

            &--disabled {
              opacity: 0.5;

              &:hover {
                cursor: not-allowed;
              }

              @media (max-width: 324px) {
                font-size: smaller;
              }
            }
          }

          .overlay {
            left: 5.7em;
            top: 2.8em;

            .modal-title-bar {
              text-transform: capitalize;
              a {
                button {
                  margin: 0 0.5em 0 0;
                }
              }
            }

            .modal-content {
              text-align: right;
              p {
                height: auto;
                margin-left: 1.9em;
                width: auto;
              }

              button {
                color: #fff;
                height: auto;
                margin: 0 1.5em 0 0;
                padding: 0.2em 1em;
                width: auto;
              }

              .approval-comment-modal,
              .rejection-comment-modal {
                &__btn {
                  border-radius: 0;
                }
              }

              .approval-comment-modal {
                &__btn {
                  background-color: #08c75e;
                }
              }

              .rejection-comment-modal {
                &__btn {
                  background-color: #ff5359;
                }
              }
            }
          }
        }

        &:first-child {
          text-align: center;

          .text {
            &--grey {
              padding: 2em 2em 0;
            }
          }
        }

        .text {
          &--grey {
            padding-left: 2em;
            padding-right: 2em;

            &:first-child {
              padding-top: 2em;
            }
          }

          &--black {
            padding-left: 1.6em;
          }
        }
      }
    }
  }
}

@media only screen and (max-width: 1018px) {
  .approval {
    .text {
      &--black {
        font-size: 1em;
      }
      &--grey {
        font-size: 0.8em;
      }
    }
    .header {
      font-size: 1.3em;

    }
    .main-container {
      display: block;
      width: 100%;

      .left-pane {
        width: 100%;
        margin: 0 1.2% 0 0;
        .row {
          .mobile {
            display: block;
          }

          .partition {
            padding: 2em 0 0 2em;
          }
        }
      }

      .right-pane {
        width: 100%;
        .btn-group {
          .approval-modal-overlay {
            top: 3em !important;
          }

          .rejection-modal-overlay {
            top: 3em !important;
            left: 265px !important;
          }
        }
        .desktop {
          display: none;
        }
      }
    }
  }
}
@media only screen and (max-width: 520px) {
  .approval {
    .main-container {
      .left-pane {
        .row {
          height: initial;
          display: block;
          border: 1px solid #e4e4e4;

          &:first-child {
            display: flex;
            border: 0;
            .partition {
              border: 0;
            }
          }

          .partition {
            width: 100%;
            text-align: center;
            padding: 0;
            margin: 1em 0;
            border-bottom: 1px solid #e4e4e4;

            &:last-child {
              border: 0;
            }
          }
        }
      }
      .right-pane {
        width: 100%;
        .btn-group {
          .approval-modal-overlay {
            top: 3em !important;
          }
          .rejection-modal-overlay {
            top: 3em !important;
            left: 160px !important;
          }
        }
      }
    }
  }
}
@media only screen and (max-width: 459px) {
  .approval {
    .main-container {
      .right-pane {
        width: 100%;
        .btn-group {
          .approval-modal-overlay {
            top: 3em !important;
          }
          .rejection-modal-overlay {
            top: 3em !important;
            left: 75px !important;
          }
        }
      }
    }
  }
}

